<resources>
    <string name="app_name">I Chicken You</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="teste">it works!</string>
    <string name="meuemail" translatable="false">jonathansilva@daum.net</string>
    <string name="assuntoemail">I Chicken You - Bug report</string>
    <string name="mensagememail">Please, describe all details of the bug which you found.</string>
    <string name="enunciadointentbug">Choose a email client to proceed</string>
    <string name="idioma_portugues">pt</string>
    <string name="idioma_coreano">ko</string>
    <string name="idioma_ingles">en</string>
    <string name="titlemenunames">Choose a friend\'s name:</string>
    <string name="titlechickenparts">Choose a chicken body part:</string>
    <string name="titlethingstodo">Choose something that you like to do:</string>
    <string name="menu">Menu</string>
    <string name="genders">Which gender is applicable to your friend(s)?</string>
    <string name="diga_amigos">What about your friend(s)?</string>
    <string name="diga_amigas">What about your friend(s)?</string>
    <string name="diga_amigos_e_amigas">What about your friend(s)?</string>
    <string name="a" translatable="false">aa</string>
    <string name="sobre_texto">Application for the purpose of presenting a final paper at the Estácio de Sá Polo Paraíso Universidade em São Paulo, to obtain a bachelor\'s degree in Information Systems. The idea of this application was to make a Brazilian game a contemporary game, perpetuating a cultural game.</string>
    <string name="enunciado">Close this app?</string>
    <string name="querencerrar">Do you want to close this app?</string>
    <string name="fechar">Close</string>
    <string name="naofechar">Don\'t close</string>
    <string name="sobre_som">Sound:</string>
    <string name="no_sound" translatable="false">off</string>
    <string name="off_sound" translatable="false">on</string>
    <string name="bt_share_text">Share</string>
    <string name="bt_close_text">Close</string>
    <string name="bt_play_text">Play</string>
    <string name="bt_save_text">Save</string>
    <string name="bt_erase_text">Erase</string>
    <string name="bt_edit_text">Edit</string>
    <string name="bt_view_text">View</string>
    <string name="bt_advance_text">Advance</string>
    <string name="bt_back_text">Return</string>
    <string name="saved">Saved</string>
    <string name="menu_home">Home</string>
    <string name="menu_see">Display saved results</string>
    <string name="menu_rules">Game rules</string>
    <string name="menu_sobre">About</string>
    <string name="menu_sair">Close</string>
    <string name="label_options">Make your choices</string>
    <string name="label_results">Result:</string>
    <string name="title_activity_menu">I Chicken You</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Awesome App!</string>
    <string name="nav_header_subtitle">Developer: jonathansilva@daum.net</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="termos">Do you agree the rules below?</string>
    <string name="aceito">I agree</string>
    <string name="recuso">I refuse</string>
    <string name="grato">Thanks!</string>
    <string name="aindasimgrato">thanks, please uninstall this application.</string>
    <string name="aceite_primeiro">You must agree to the game rules first.</string>
    <string name="ir_regras">Go</string>
    <string name="depois">Later</string>
    <string name="motivar">let\'s go:</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="choose_social_destination">Which social network?</string>
    <string name="Twitter" translatable="false">Twitter</string>
    <string name="Kakao" translatable="false">Kakao</string>
    <string name="title_activity_gender">GenderActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="redes_sociais">
        <item color="#4682e3">Twitter</item>
        <item color="#f0f714">Kakao</item>
        <item color="#02cc05">Close</item>
    </string-array>
</resources>